# PixelGen

./: .gitignore  LICENSE  README.md  pyproject.toml  static_site_server.py  web.py
backend/: api.py  pixelgen.py
frontend/: astro.config.mjs  components.d.ts  package-lock.json  package.json
frontend/src/components/: colors_list.vue  navbar.vue  pic_viewer.vue  pixel_form.vue
frontend/src/components/utils/: affix.vue  img-chooser.vue  relative_sq.vue
frontend/src/layouts/: Layout.astro  MDLayout.astro
frontend/src/pages/: about.md  index.astro
frontend/src/store/: index.js
frontend/src/styles/: markdown.css
