[tool.poetry]
name = "PixelGen"
version = "0.1.0"
description = "A pixelart generator website based on opencv."
authors = ["KBlueLeaf"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
opencv-python = "^4.6.0"
numpy = "^1.23.2"
Pillow = "^9.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
